Added WebApp Deploy code
Added new Role to deploy WebApp
 index.php
 create.php
 update.php
 delete.php
 error.php
config.php.j2

--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -3,7 +3,7 @@
 # talk to the backend MySQL database
 ---
 - name: 1. Install PHP
-  apt: name=php state=present update_cache=yes
+  apt: name=php7.* state=latest update_cache=yes
 
 - name: 2. Install PHP module for MySQL
   apt: name=php-mysql state=present update_cache=yes
